"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------
gtk-v2/glade: gtk-v1.glade, un-deux.glade: Rename widgets to use a proper name
  instead of the numbered names.
gtk-v2/glade/v1-redux.glade: Add missing label_cha for Charisma stat.  Rename
  widgets to use a proper name instead of the numbered names.
gtk-v2/glade: gtk-v1.gladep, v1-redux.glade, un-deux.glade: Edit program_name
  to see if it shows up in the title bar.
Kevin Bulgrien

gtk-v2/glade/Makefile.am: Fix non portable usage of foreach, use makes
  built in variable substitution instead.
MSW 2008-01-27

gtk-v2/glade/un-deux.glade: Fix missing label_cha for Charisma value to be
  shown.
gtk-v2/glade/un-deux.glade: The original design did not allow the ground view
  to be expanded optimally, the layout was changed to remove this limitation.
gtk-v2/glade/AUTHORS: Update the description of the un-deux layout.

gtk-v2/glade/README: Updated this file with new hints and information.  Some
  spelling fixed.
gtk-v2/glade/un-deux.glade, gtk-v2/glade/un-deux.gladep: This layout is a
  heavily modified v1-redux that places the critical messages, stat bars,
  protections, and ground view all in horizontally adjustable boxes.  It
  still vaguely reminiscent of the original GTK V1 client, but only slightly
  so.  The message boxes are to the left of the map, and the inventory view is
  to the right.  The command input box is between the tall message pane and
  the short critical message pane, at the bottom left corner of the map.  This
  puts chat messages right next to the command input box.  The window size
  defaults to 1180x925 and comfortably handles a 19x17 map pane.
gtk-v2/glade/Makefile.am: Add support for un-deux.glade
gtk-v2/glade/AUTHORS: Describe the un-deux window.
Kevin Bulgrien

gtk-v2/glade/lobotomy.glade, gtk-v2/glade/lobotomy.gladep: A slightly variant
  layout that challenges the tradition of those that came before.